--- a/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
+++ b/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
@@ -20,7 +20,7 @@
         </li>
         <li class="nav-item">
           <a
-            [routerLink]="['/profiles', (currentUser$ | async).username]"
+            [routerLink]="['/profiles', (currentUser$ | async)?.username]"
             class="nav-link">
               <img [src]="(currentUser$ | async).image" alt="currentUser" class="user-pic">
               &nbsp; {{(currentUser$ | async).username}}
